# SimplePathTracer

./: CMakeLists.txt  DOXYGEN  README.md  cornell.sh
include/: camera.h  helper.h  integrator.h  light.h  material.h  mycamera.h  ray.h  scene.h  shape.h  utility.h
scene/cornell-box/: cornell-box.mtl
src/: camera.cpp  helper.cpp  integrator.cpp  light.cpp  main.cpp  material.cpp  scene.cpp  shape.cpp
